--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -21,4 +21,8 @@
         </activity>
     </application>
 
+
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
+
 </manifest>
